Add loaders and infinite scrolling

--- a/PASSCITY/AvailableAnnouncesTableViewCell.xib
+++ b/PASSCITY/AvailableAnnouncesTableViewCell.xib
@@ -112,7 +112,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTJ-yq-ZWK" customClass="GoButton" customModule="PASSCITY" customModuleProvider="target">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QTJ-yq-ZWK" customClass="GoButton" customModule="PASSCITY" customModuleProvider="target">
                                 <rect key="frame" x="169.5" y="259" width="36" height="4"/>
                                 <color key="backgroundColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="0.60065184049999998" colorSpace="calibratedRGB"/>
                                 <constraints>
