--- a/PASSCITY/AvailableProductsTableViewCell.xib
+++ b/PASSCITY/AvailableProductsTableViewCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAZ-6d-51X">
                         <rect key="frame" x="20" y="20" width="58" height="58"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0cR-dZ-Uwa">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0cR-dZ-Uwa">
                                 <rect key="frame" x="10.5" y="10.5" width="37" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37" id="2rK-gj-viv"/>
@@ -51,6 +51,9 @@
                         </constraints>
                         <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <state key="normal" image="iconMenuBig"/>
+                        <connections>
+                            <action selector="moreButtonAction:" destination="d3M-L3-n62" eventType="touchUpInside" id="DuT-VZ-tLs"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zk8-KQ-Hjt">
                         <rect key="frame" x="98" y="20" width="237" height="41.5"/>
