--- a/PASSCITY/PasscityMapCardView.xib
+++ b/PASSCITY/PasscityMapCardView.xib
@@ -85,7 +85,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconClock" translatesAutoresizingMaskIntoConstraints="NO" id="gkO-TU-Sol">
                     <rect key="frame" x="205.5" y="62" width="12" height="12"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сегодня 18:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQX-ar-VsE">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сегодня 18:00" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQX-ar-VsE">
                     <rect key="frame" x="223.5" y="61" width="84.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -98,6 +98,7 @@
                 <constraint firstItem="oxc-2b-aEa" firstAttribute="leading" secondItem="YpG-kh-c5m" secondAttribute="trailing" constant="15" id="36P-w9-T7j"/>
                 <constraint firstItem="M3r-O1-7hc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CrM-DO-FXk" secondAttribute="bottom" id="BbP-K4-zZ7"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mQX-ar-VsE" secondAttribute="trailing" id="CVp-dp-iee"/>
+                <constraint firstItem="mQX-ar-VsE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="CrM-DO-FXk" secondAttribute="bottom" constant="5" id="Cgk-jo-KeW"/>
                 <constraint firstItem="gkO-TU-Sol" firstAttribute="leading" secondItem="DCK-mo-oIk" secondAttribute="trailing" constant="15" id="Cx4-w9-pe4"/>
                 <constraint firstItem="CrM-DO-FXk" firstAttribute="leading" secondItem="YpG-kh-c5m" secondAttribute="trailing" constant="9" id="KNd-9u-hzF"/>
                 <constraint firstItem="Z4b-ba-dLy" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="P9a-wg-HQy"/>
@@ -117,6 +118,7 @@
                 <constraint firstItem="eK8-Ny-5gr" firstAttribute="top" secondItem="oxc-2b-aEa" secondAttribute="bottom" constant="8" id="skK-mp-ER3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="eK8-Ny-5gr" secondAttribute="bottom" constant="10" id="swR-6f-UwB"/>
                 <constraint firstItem="gkO-TU-Sol" firstAttribute="centerY" secondItem="yFF-j0-smR" secondAttribute="centerY" id="web-qL-Rjt"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mQX-ar-VsE" secondAttribute="bottom" id="wil-F9-ch7"/>
                 <constraint firstItem="M3r-O1-7hc" firstAttribute="centerY" secondItem="oxc-2b-aEa" secondAttribute="centerY" id="yBM-Av-Eks"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
