--- a/PASSCITY/AvailableAnnouncesTableViewCell.xib
+++ b/PASSCITY/AvailableAnnouncesTableViewCell.xib
@@ -24,8 +24,30 @@
                             <constraint firstAttribute="height" constant="275" id="aA3-iQ-W0g"/>
                         </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agG-f7-88Q" customClass="GradientView" customModule="PASSCITY" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="275"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h44-5w-JCJ">
+                        <rect key="frame" x="20" y="295" width="335" height="72"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="75" id="SCA-Qa-XXB"/>
+                        </constraints>
+                        <string key="text">Твочество арт-группы «Recycle» (Андрей Блохин и Георгий Кузнецов) легко для восприятия, эффектно и успешно. «Recycle» — лауреаты премии Кандинского, участники Венецианской биеннале. Они удачно нашли нишу, но не пытаются эволюционировать…</string>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-Qf-bCd">
+                        <rect key="frame" x="172" y="382" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="5UL-j3-vKv"/>
+                            <constraint firstAttribute="width" constant="30" id="6FB-lK-b5o"/>
+                        </constraints>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <state key="normal" image="iconNavbarClose"/>
+                        <connections>
+                            <action selector="closeButtonAction:" destination="gdY-aj-b2X" eventType="touchUpInside" id="0Em-ci-n1l"/>
+                        </connections>
+                    </button>
+                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agG-f7-88Q" customClass="GradientView" customModule="PASSCITY" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="8" width="375" height="275"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fs6-vy-De7">
                                 <rect key="frame" x="335" y="10" width="30" height="30"/>
@@ -138,6 +160,30 @@
                                     <action selector="touchUpOutsideAction:" destination="gdY-aj-b2X" eventType="touchUpOutside" id="pF7-P1-gtT"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oT6-MP-pJk">
+                                <rect key="frame" x="3" y="147" width="240" height="34"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="до 25 авг. 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jop-LS-ZM9">
+                                        <rect key="frame" x="83" y="7" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="jop-LS-ZM9" firstAttribute="top" secondItem="oT6-MP-pJk" secondAttribute="top" constant="6" id="HgP-Ou-Kjr"/>
+                                    <constraint firstAttribute="trailing" secondItem="jop-LS-ZM9" secondAttribute="trailing" constant="13" id="LPu-43-3oR"/>
+                                    <constraint firstAttribute="height" constant="34" id="P0L-OK-Yok"/>
+                                    <constraint firstAttribute="bottom" secondItem="jop-LS-ZM9" secondAttribute="bottom" constant="6" id="RgK-l4-1Wi"/>
+                                    <constraint firstItem="jop-LS-ZM9" firstAttribute="leading" secondItem="oT6-MP-pJk" secondAttribute="leading" constant="40" id="v91-IP-s6n"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="17"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -159,8 +205,10 @@
                             <constraint firstItem="QTJ-yq-ZWK" firstAttribute="top" secondItem="pl2-TY-Kii" secondAttribute="bottom" constant="12" id="VEK-uB-Kwi"/>
                             <constraint firstItem="fHi-or-GdB" firstAttribute="centerY" secondItem="soO-j0-5ZZ" secondAttribute="centerY" id="YGR-j3-VNu"/>
                             <constraint firstItem="QTJ-yq-ZWK" firstAttribute="centerX" secondItem="agG-f7-88Q" secondAttribute="centerX" id="ZBb-Q5-yr6"/>
+                            <constraint firstItem="Dk4-2E-SJd" firstAttribute="top" secondItem="oT6-MP-pJk" secondAttribute="bottom" constant="14" id="ZZ7-w8-G1v"/>
                             <constraint firstItem="wKI-DQ-J1q" firstAttribute="centerY" secondItem="4Rp-d7-LoF" secondAttribute="centerY" id="ZkF-rH-2WP"/>
                             <constraint firstAttribute="trailing" secondItem="Fs6-vy-De7" secondAttribute="trailing" constant="10" id="ax8-q1-37P"/>
+                            <constraint firstItem="oT6-MP-pJk" firstAttribute="leading" secondItem="agG-f7-88Q" secondAttribute="leading" constant="-20" id="ckW-S3-qJH"/>
                             <constraint firstItem="OSD-IF-I69" firstAttribute="top" secondItem="QTJ-yq-ZWK" secondAttribute="top" id="eee-gg-EdM"/>
                             <constraint firstItem="JcL-5A-FUV" firstAttribute="top" secondItem="Dk4-2E-SJd" secondAttribute="bottom" constant="15" id="fzw-Dk-FPQ"/>
                             <constraint firstAttribute="bottom" secondItem="QTJ-yq-ZWK" secondAttribute="bottom" constant="12" id="gOk-gV-qmX"/>
@@ -182,28 +230,6 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h44-5w-JCJ">
-                        <rect key="frame" x="20" y="295" width="335" height="72"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="75" id="SCA-Qa-XXB"/>
-                        </constraints>
-                        <string key="text">Твочество арт-группы «Recycle» (Андрей Блохин и Георгий Кузнецов) легко для восприятия, эффектно и успешно. «Recycle» — лауреаты премии Кандинского, участники Венецианской биеннале. Они удачно нашли нишу, но не пытаются эволюционировать…</string>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-Qf-bCd">
-                        <rect key="frame" x="172" y="382" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="5UL-j3-vKv"/>
-                            <constraint firstAttribute="width" constant="30" id="6FB-lK-b5o"/>
-                        </constraints>
-                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                        <state key="normal" image="iconNavbarClose"/>
-                        <connections>
-                            <action selector="closeButtonAction:" destination="gdY-aj-b2X" eventType="touchUpInside" id="0Em-ci-n1l"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="agG-f7-88Q" firstAttribute="leading" secondItem="uMZ-Bx-Zbo" secondAttribute="leading" id="4iL-cE-1TY"/>
@@ -229,6 +255,8 @@
                 <outlet property="commentsCountLabel" destination="wKI-DQ-J1q" id="4hU-Kn-eyl"/>
                 <outlet property="commentsImageView" destination="4Rp-d7-LoF" id="Diy-Yw-IK3"/>
                 <outlet property="dateLabel" destination="pl2-TY-Kii" id="FOR-jr-QrR"/>
+                <outlet property="datesLabel" destination="jop-LS-ZM9" id="tgE-n5-dWb"/>
+                <outlet property="datesView" destination="oT6-MP-pJk" id="efF-1q-L1S"/>
                 <outlet property="descriptionButton" destination="QTJ-yq-ZWK" id="aoD-Y5-n32"/>
                 <outlet property="descriptionLabel" destination="h44-5w-JCJ" id="vpO-pV-Wsv"/>
                 <outlet property="distationLabel" destination="fHi-or-GdB" id="1Yu-uP-3mf"/>
