--- a/PASSCITY/AvailableAnnouncesTableViewCell.xib
+++ b/PASSCITY/AvailableAnnouncesTableViewCell.xib
@@ -46,7 +46,7 @@
                             <action selector="closeButtonAction:" destination="gdY-aj-b2X" eventType="touchUpInside" id="0Em-ci-n1l"/>
                         </connections>
                     </button>
-                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agG-f7-88Q" customClass="GradientView" customModule="PASSCITY" customModuleProvider="target">
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="agG-f7-88Q" customClass="GradientView" customModule="PASSCITY" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="8" width="375" height="275"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fs6-vy-De7">
@@ -160,11 +160,11 @@
                                     <action selector="touchUpOutsideAction:" destination="gdY-aj-b2X" eventType="touchUpOutside" id="pF7-P1-gtT"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oT6-MP-pJk">
-                                <rect key="frame" x="3" y="147" width="240" height="34"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oT6-MP-pJk">
+                                <rect key="frame" x="-20" y="147" width="144.5" height="34"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="до 25 авг. 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jop-LS-ZM9">
-                                        <rect key="frame" x="83" y="7" width="42" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="до 25 авг. 2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jop-LS-ZM9">
+                                        <rect key="frame" x="40" y="7" width="91.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
