--- a/PASSCITY/AvailableProductsTableViewCell.xib
+++ b/PASSCITY/AvailableProductsTableViewCell.xib
@@ -56,25 +56,25 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zk8-KQ-Hjt">
-                        <rect key="frame" x="98" y="20" width="237" height="41.5"/>
+                        <rect key="frame" x="98" y="20" width="237" height="17"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="1000" image="iconLabel" translatesAutoresizingMaskIntoConstraints="NO" id="1RG-WW-3vF">
-                        <rect key="frame" x="98" y="71.5" width="12" height="12"/>
+                        <rect key="frame" x="98" y="47" width="12" height="12"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8G-NS-G9T">
-                        <rect key="frame" x="116" y="70.5" width="31" height="14.5"/>
+                        <rect key="frame" x="116" y="46" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="999" verticalHuggingPriority="999" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="999" image="iconClock" translatesAutoresizingMaskIntoConstraints="NO" id="exV-yD-fJr">
-                        <rect key="frame" x="98" y="96" width="12" height="12"/>
+                        <rect key="frame" x="98" y="71.5" width="12" height="12"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Unr-sJ-ZNV">
-                        <rect key="frame" x="116" y="95" width="31" height="14.5"/>
+                        <rect key="frame" x="116" y="70.5" width="31" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -98,7 +98,7 @@
                     <constraint firstItem="t8G-NS-G9T" firstAttribute="leading" secondItem="1RG-WW-3vF" secondAttribute="trailing" constant="6" id="q4l-u5-P9A"/>
                     <constraint firstItem="aAZ-6d-51X" firstAttribute="leading" secondItem="rjR-5V-pB2" secondAttribute="leading" constant="20" id="qt4-De-jco"/>
                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="t8G-NS-G9T" secondAttribute="trailing" constant="20" id="uSk-hr-mwK"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Unr-sJ-ZNV" secondAttribute="bottom" constant="5" id="zCZ-dB-OBB"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Unr-sJ-ZNV" secondAttribute="bottom" constant="5" id="zCZ-dB-OBB"/>
                 </constraints>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
